@@ -1,5 +1,12 @@
 2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* ld-i386/i386.exp (run_cc_link_tests): Add $PLT_CFLAGS to
+	-fPIC if needed.
+	* ld-x86-64/mpx.exp (run_cc_link_tests): Likewise.
+	* ld-x86-64/x86-64.exp (run_cc_link_tests): Likewise.
+
+2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* ld-elfvsb/elfvsb.exp (visibility_run): Pass $PLT_CFLAGS to
 	ld_compile.
 
